--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -90,6 +90,7 @@
 
 
     var manageStartEndDate = function () {
+        debugger 
         var sDate = new Date($('#StartDate').val());
         var dDate = new Date($('#EndDate').val());
         if (sDate>dDate) {
@@ -110,11 +111,14 @@
             });
         }
 
-        if ($("#EndDate").val().length>0) {
+
+        if ($("#EndDate").val().length > 0) {
+            if ($("#EndDate").val().indexOf(" ") > 0)
             $("#EndDate").val($("#EndDate").val().substr(0, $("#EndDate").val().indexOf(" ")));
         }
 
         if ($("#StartDate").val().length > 0) {
+            if ($("#StartDate").val().indexOf(" ") > 0)
             $("#StartDate").val($("#StartDate").val().substr(0, $("#StartDate").val().indexOf(" ")));
         }
     };
