--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -173,10 +173,11 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label>Spend</label>
+                                            <label>Spend</label><span class="text-danger">*</span><br />
                                             @Html.TextBoxFor(m => m.Spend, (Model.Id != 0 && Model.Status == "Complete") ?
                                                 (object)new { disabled = "disabled", @class = "form-control", @maxlength = "10" } :
                                                 (object)new { @class = "form-control", @maxlength = "10" })
+                                            <div class="validmsgSpend"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -255,42 +256,38 @@
                        
                     </fieldset>
 
-                <fieldset>
+                <fieldset>                   
                     <div class="form-group">
                         <div class="row " style="padding-top: 10px">
                             <div class="col-md-4"></div>
-                            <div class="col-md-8">                                
+                            <div class="col-md-8"> 
+                                
                                 @if (Model.Status == "")
                                 {
-                                    <div class="col-md-3">
-                                        <input type="button" class="btn btn-block btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'"/>
-                                    </div>
+                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'"/></div>
                                 }
                                 else
                                 {
-                                    <div class="col-md-3">
-                                        <input type="button" class="btn btn-block btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("ChildList", "ChildList")'"/>
-                                    </div>
-                                }
-
-                                @if (Model.Status != "Complete")
-                                {
-                                    <div class="col-md-4">
-                                        <input type="button" Id="btnSubmitChild" name="button" value="Submit" class="btn btn-block btn-primary col-sm-12"/>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <input type="button" Id="btnSaveDraftChild" name="button" value="Save Draft" class="btn btn-block btn-primary col-sm-12"/>
-                                    </div>
-                                }
+                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("ChildList", "ChildList")'"/></div>
+                                } 
                                 @if (Model.Id != 0 && Model.Status == "Save Draft")
                                 {
-                                    <div class="col-md-4">
-                                        <input type="button" Id="btnDeleteChild" name="button" value="Delete Draft" class="btn btn-block btn-primary col-sm-12" onclick="return confirm('Are you sure you want to delete?')"/>
+                                    <div class="col-md-3">
+                                        <input type="button" Id="btnDeleteChild" name="button" value="Delete Draft" class="btn btn-primary col-sm-12" onclick="return confirm('Are you sure you want to delete?')" />
                                     </div>
-                                }
+                                }  
+                                @if (Model.Status != "Complete")
+                                {
+                                    <div class="col-md-3">
+                                        <input type="button" Id="btnSaveDraftChild" name="button" value="Save Draft" class="btn btn-primary col-sm-12" />
+                                    </div>
+                                    <div class="col-md-3">
+                                        <input type="button" Id="btnSubmitChild" name="button" value="Submit" class="btn btn-primary col-sm-12" />
+                                    </div>
+                                }                                                            
                             </div>
                         </div>
-                        </div>
+                    </div>
                 </fieldset>
                     <!-- /.row -->
                 </div>
