--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -8,8 +8,7 @@
         <section class="content">
             <!-- SELECT2 EXAMPLE -->
             <div class="box box-default">
-                <div class="box-header with-border">
-                    
+                <div class="box-header with-border">                    
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body">
@@ -262,7 +261,7 @@
                             <div class="col-md-4"></div>
                             <div class="col-md-8"> 
                                 
-                                @if (Model.Status == "")
+                                @if (Model.Id == 0)
                                 {
                                     <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'"/></div>
                                 }
