--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -176,7 +176,7 @@
                         <div class="col-md-4"></div>
                         <div class="col-md-8"> 
                                 
-                            @if (Model.Status == "")
+                            @if (Model.Id == 0)
                             {
                                 <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'"/></div>
                             }
