--- a/MRM/Views/ChildList/ChildList.cshtml
+++ b/MRM/Views/ChildList/ChildList.cshtml
@@ -64,7 +64,7 @@
                             <tbody>
                                 <tr>
                                     <td>C-@item.Id.ToString("0000000")</td>
-                                    <td>@Html.ActionLink((item.Name == null ? "----" : item.Name), "ChildCampaign", "ChildCampaign", new { Id = item.Id }, null)</td>                                    
+                                    <td>@(item.Name==null?"----":item.Name)</td>
                                     <td>@item.CampaignDescription</td>
                                     <td>@item.Status</td>
                                     <td>@(item.StartDate?.ToString("dd-MM-yyyy") ?? string.Empty)</td>
