--- a/MRM/Views/MasterList/MasterList.cshtml
+++ b/MRM/Views/MasterList/MasterList.cshtml
@@ -66,7 +66,7 @@
                             {
                                 <tr>
                                     <td>M-@item.Id.ToString("0000000")</td>
-                                    <td>@Html.ActionLink((item.Name==null?"----":item.Name), "MasterCampaign", "MasterCampaign", new { Id = item.Id }, null)</td>
+                                    <td>@(item.Name==null?"----":item.Name)</td>
                                     <td>@item.CampaignDescription</td>
                                     <td>@item.Status</td>
                                     <td>@(item.StartDate?.ToString("dd-MM-yyyy") ?? string.Empty)</td>
