--- a/MRM/Views/TacticList/TacticList.cshtml
+++ b/MRM/Views/TacticList/TacticList.cshtml
@@ -64,7 +64,7 @@
                             <tbody>
                             <tr>
                                 <td>T-@item.Id.ToString("0000000")</td>
-                                <td>@Html.ActionLink((item.Name==null?"----":item.Name), "TacticCampaign", "TacticCampaign", new { Id = item.Id }, null)</td>
+                                <td>@(item.Name==null?"----":item.Name)</td>
                                 <td>@item.TacticDescription</td>
                                 <td>@item.Status</td>
                                 <td>@(item.StartDate?.ToString("dd-MM-yyyy") ?? string.Empty)</td>
