--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -45,7 +45,7 @@
                                     <label>Sub Campaign Description<span class="text-danger">*</span></label>
                                     @Html.TextAreaFor(m => m.CampaignDescription, (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "form-control" } :
-                                        (object)new { @class = "form-control"})
+                                        (object)new { @class = "form-control", maxlength = 500, onkeypress = "return alpha(event)" })
                                     <div class="validmsgSubCampDesc"></div>
                                 </div>
                             </div>
@@ -72,13 +72,13 @@
 
                         <div class="row">
                             <div class="col-md-6">
-                                <label>Start Date</label><span class="text-danger">*</span>
+                                <label>Start Date<span class="text-danger">*</span> [MM/DD/YYYY]</label>
                                 <div class="form-group">
                                     <div class="col-md-6 date datealign">
                                         <div class="input-group input-append date">
                                             @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                                 (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
-                                                (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
+                                                (object)new { @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "[MM/DD/YYYY]" })
                                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                         </div>
                                     </div>
@@ -87,13 +87,13 @@
 
                             </div>
                             <div class="col-md-6">
-                                <label>End Date</label><span class="text-danger">*</span>
+                                <label>End Date<span class="text-danger">*</span> [MM/DD/YYYY]</label>
                                 <div class="form-group">
                                     <div class="col-md-6 form-group date datealign">
                                         <div class="input-group input-append date">
                                             @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                                 (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
-                                                (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
+                                                (object)new { @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "[MM/DD/YYYY]" })
                                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                         </div>
                                     </div>
@@ -278,7 +278,7 @@
                                 @if (Model.Status != "Complete")
                                 {
                                     <div class="col-md-3">
-                                        <input type="button" Id="btnSaveDraftChild" name="button" value="Save Draft" class="btn btn-primary col-sm-12" />
+                                        <input type="button" Id="btnSaveDraftChild" name="button" value="Draft" class="btn btn-primary col-sm-12" />
                                     </div>
                                     <div class="col-md-3">
                                         <input type="button" Id="btnSubmitChild" name="button" value="Submit" class="btn btn-primary col-sm-12" />
