--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -30,9 +30,9 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Master Campaign Description<span class="text-danger">*</span></label>
-                                @Html.TextBoxFor(m => m.CampaignDescription, (Model.Id != 0 && Model.Status == "Complete") ?
+                                @Html.TextAreaFor(m => m.CampaignDescription, (Model.Id != 0 && Model.Status == "Complete") ?
                                     (object)new { disabled = "disabled", @class = "form-control" } :
-                                    (object)new { @class = "form-control" })
+                                    (object)new { @class = "form-control", maxlength = 500, onkeypress = "return alpha(event)" })
                                 <div class="validmsgMasterDesc"></div>
                             </div>
 
@@ -117,13 +117,13 @@
                     <div class="row">
 
                         <div class="col-md-6">
-                            <label>Start Date<span class="text-danger">*</span></label>
+                            <label>Start Date<span class="text-danger">* </span>[MM/DD/YYYY]</label>
                             <div class="form-group">
                                 <div class="col-md-6 date datealign">
                                     <div class="input-group input-append date">
                                         @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
-                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
+                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "[MM/DD/YYYY]" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -131,13 +131,13 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <label>End Date<span class="text-danger">*</span></label>
+                            <label>End Date<span class="text-danger">*</span> [MM/DD/YYYY]</label>
                             <div class="form-group">
                                 <div id="dvMasterEndDate" class="col-md-6 form-group date datealign">
                                     <div class="input-group input-append date">
                                         @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
-                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10" })
+                                            (object)new { @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "[MM/DD/YYYY]" })
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -193,7 +193,7 @@
                             @if (Model.Status != "Complete")
                             {
                                 <div class="col-md-3">
-                                    <input type="button" Id="btnSaveDraft" name="button" value="Save Draft" class="btn btn-primary col-sm-12" />
+                                    <input type="button" Id="btnSaveDraft" name="button" value="Draft" class="btn btn-primary col-sm-12" />
                                 </div>
                                 <div class="col-md-3">
                                     <input type="button" Id="btnSubmit" name="button" value="Submit" class="btn btn-primary col-sm-12" />
