--- a/MRM/Views/MasterList/MasterList.cshtml
+++ b/MRM/Views/MasterList/MasterList.cshtml
@@ -65,12 +65,12 @@
                             @foreach (var item in Model.MasterCampaigns)
                             {
                                 <tr>
-                                    <td>M-@item.Id.ToString("0000000")</td>
+                                    <td>M@(item.Id.ToString("0000000"))</td>
                                     <td>@(item.Name==null?"----":item.Name)</td>
                                     <td>@item.CampaignDescription</td>
-                                    <td>@item.Status</td>
-                                    <td>@(item.StartDate?.ToString("dd-MM-yyyy") ?? string.Empty)</td>
-                                    <td>@(item.EndDate?.ToString("dd-MM-yyyy") ?? string.Empty)</td>
+                                    <td>@(item.Status == "Complete" ? "Active" : "Save Draft") </td>
+                                    <td>@(item.StartDate?.ToString("MM/dd/yyyy") ?? string.Empty)</td>
+                                    <td>@(item.EndDate?.ToString("MM/dd/yyyy") ?? string.Empty)</td>
                                     <td>
                                         @Html.ActionLink("View / Edit", "MasterCampaign", "MasterCampaign", new { id = item.Id}, new { })
                                         @if (item.Status != "Complete")
