bug fixing and implementation of bug tracking sheet

--- a/MRM/Content/MasterStyle.css
+++ b/MRM/Content/MasterStyle.css
@@ -40,6 +40,12 @@ legend {
     height: 120px;
 }
 
+.lb-sm {
+    font-size: 10px;
+}
+
+
+
 @@keyframes spin {
      0% {
          transform: rotate(0deg);
