--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -8,6 +8,6 @@
 <script src="~/Scripts/MasterScript.js"></script>
 
 <div id="dvFormMasterCampaign">
-        @Html.Partial("MasterCampaignForm", Model);
+        @Html.Partial("MasterCampaignForm", Model)
 </div>
 
