--- a/MRM/Views/TacticCampaign/TacticCampaign.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaign.cshtml
@@ -4,5 +4,5 @@
 }
 <script src="~/Scripts/TacticsScript.js"></script>
 <div id="dvFormTacticCampaign">
-    @Html.Partial("TacticCampaignForm", Model);
+    @Html.Partial("TacticCampaignForm", Model)
 </div>
