--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -4,7 +4,7 @@
 }
 <script src="~/Scripts/ChildScript.js"></script>
 <div id="dvFormChildCampaign">
-    @Html.Partial("ChildCampaignForm", Model);
+    @Html.Partial("ChildCampaignForm", Model)
 </div>
 
 
