--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -117,7 +117,7 @@
                     <div class="row">
 
                         <div class="col-md-6">
-                            <label>Start Date<span class="text-danger">*</span></label>
+                            <label>Start Date<span class="text-danger lb-sm">(Format: MM/DD/YYYY) *</span></label>
                             <div class="form-group">
                                 <div class="col-md-6 date datealign">
                                     <div class="input-group input-append date">
@@ -131,7 +131,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <label>End Date<span class="text-danger">*</span></label>
+                            <label>End Date<span class="text-danger lb-sm">(Format: MM/DD/YYYY) *</span></label>
                             <div class="form-group">
                                 <div id="dvMasterEndDate" class="col-md-6 form-group date datealign">
                                     <div class="input-group input-append date">
