master campaign listing

--- a/MRM/Views/MasterCampaign/Index.cshtml
+++ b/MRM/Views/MasterCampaign/Index.cshtml
@@ -22,7 +22,7 @@
             <div class="col-md-3"><label>Master Campaign</label></div>
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("MasterCampaign", "MasterCampaign")'" /></div>
             @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
-            <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("MasterList", "MasterList")'" /></div>
+            <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("CampaignList", "MasterCampaign")'" /></div>
         </div>
         <div class="row" style="padding-top:15px">
             <div class="col-md-3"><label>Sub Campaign</label></div>
