--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -182,7 +182,7 @@
                             }
                             else
                             {
-                                <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("MasterList", "MasterList")'"/></div>
+                                <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("CampaignList", "MasterCampaign")'"/></div>
                             } 
                             @if (Model.Id != 0 && Model.Status == "Save Draft")
                             {
