--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -102,7 +102,7 @@
                             <div class="col-md-6">
                                 <label>Start Date<span class="text-danger lb-sm">(Format: MM/DD/YYYY) *</span></label>
                                 <div class="form-group">
-                                    <div class="col-md-6 date datealign">
+                                    <div class="col-md-6 date datealign mrm-cal">
                                         <div class="input-group input-append date">
                                             @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "MM/DD/YYYY" } :
@@ -116,7 +116,7 @@
                             <div class="col-md-6">
                                 <label>End Date<span class="text-danger lb-sm">(Format: MM/DD/YYYY) *</span></label>
                                 <div class="form-group">
-                                    <div id="dvMasterEndDate" class="col-md-6 form-group date datealign">
+                                    <div id="dvEndDate" class="col-md-6 form-group date datealign mrm-cal">
                                         <div class="input-group input-append date">
                                             @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "MM/DD/YYYY" } :
