--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -76,7 +76,7 @@
                         <div class="col-md-6">
                             <label>Start Date</label><span class="text-danger lb-sm">(Format: MM/DD/YYYY) *</span>
                             <div class="form-group">
-                                <div class="col-md-6 date datealign">
+                                <div class="col-md-6 date datealign mrm-cal">
                                     <div class="input-group input-append date">
                                         @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "MM/DD/YYYY" } :
@@ -91,7 +91,7 @@
                         <div class="col-md-6">
                             <label>End Date</label><span class="text-danger lb-sm">(Format: MM/DD/YYYY) *</span>
                             <div class="form-group">
-                                <div class="col-md-6 form-group date datealign">
+                                <div id="dvEndDate" class="col-md-6 form-group date datealign mrm-cal">
                                     <div class="input-group input-append date">
                                         @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10", @placeholder = "MM/DD/YYYY" } :
@@ -285,7 +285,7 @@
                                 @if (Model.Status != "Complete")
                                 {
                                     <div class="col-md-3">
-                                        <input type="button" Id="btnSaveDraftChild" name="button" value="Draft" class="btn btn-primary col-sm-12" />
+                                        <input type="button" Id="btnSaveDraftChild" name="button" value="Save Draft" class="btn btn-primary col-sm-12" />
                                     </div>
                                     <div class="col-md-3">
                                         <input type="button" Id="btnSubmitChild" name="button" value="Submit" class="btn btn-primary col-sm-12" />
