--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -252,7 +252,7 @@
                                             (object)new { @class = "form-control", @maxlength = "50", onkeypress = "numericvalidate(event)" })</td>
                                 </tr>
                                 <tr>
-                                    <td><label>Response</label></td>
+                                    <td><label></label></td>
                                     <td><label>Metric</label><span class="glyphicon glyphicon-chevron-down pull-right" aria-hidden="true" style="color: #c6daff;"></span></td>
                                     <td>@Html.TextBoxFor(m => m.ResponseR21Goal, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control", @maxlength = "50" } :
