child campaign list and tatctic campain list

--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -274,7 +274,7 @@
                                 }
                                 else
                                 {
-                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("ChildList", "ChildList")'"/></div>
+                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("ChildCampaignList", "ChildCampaign")'"/></div>
                                 } 
                                 @if (Model.Id != 0 && Model.Status == "Save Draft")
                                 {
