--- a/MRM/Views/MasterCampaign/Index.cshtml
+++ b/MRM/Views/MasterCampaign/Index.cshtml
@@ -28,13 +28,13 @@
             <div class="col-md-3"><label>Sub Campaign</label></div>
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("ChildCampaign", "ChildCampaign")'" /></div>
             @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
-            <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("ChildList", "ChildList")'" /></div>
+            <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("ChildCampaignList", "ChildCampaign")'" /></div>
         </div>
         <div class="row" style="padding-top:15px">
             <div class="col-md-3"><label>Tactic</label></div>
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("TacticCampaign", "TacticCampaign")'" /></div>
             @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
-            <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("TacticList", "TacticList")'" /></div>
+            <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("TacticCampaignList", "TacticCampaign")'" /></div>
         </div>
     </fieldset>
 </div>
