--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -284,7 +284,7 @@
                                 }
                                 else
                                 {
-                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("TacticList", "TacticList")'"/></div>
+                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("TacticCampaignList", "TacticCampaign")'"/></div>
                                 } 
                                 @if (Model.Id != 0 && Model.Status == "Save Draft")
                                 {
