--- a/MRM/Views/TacticCampaign/TacticCampaignList.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignList.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Master Campaining List";
+    ViewBag.Title = "Tactic Campaining List";
 }
 
 @*<script src="~/Scripts/js/jquery.dataTables.js"></script>
 <script src="~/Scripts/js/dataTables.bootstrap.js"></script>*@
 
 <script src="~/Scripts/Configuration.js"></script>
-<script src="~/Scripts/CampaignList.js"></script>
+<script src="~/Scripts/TacticCampaignList.js"></script>
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,9 +17,9 @@
     <div class="container-fluid">
         <div class="row">
             <fieldset>
-                <legend>Master Campaign Details</legend>
+                <legend>Tactic Campaign Details</legend>
                 <div class="table-responsive">
-                    <table id="masterCampaignGrid" class="display compact table table-striped table-bordered table-hover dataTable" style="font-size:inherit;" role="grid"></table>
+                    <table id="tacticCampaignGrid" class="display compact table table-striped table-bordered table-hover dataTable" style="font-size:inherit;" role="grid"></table>
                 </div>
                 <div class="row">
                     <div class="col-md-10"></div>
